--- a/style.css
+++ b/style.css
@@ -442,6 +442,7 @@ font-size: 16px;
            .text h1{
             font-size: 15px;
             color:#145fe1;
+                margin-top: 100px;
      
         }
         .text h2{
